tests and their fixes

--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -1,16 +1,28 @@
 {
-  "name": "blockchain",
+  "name": "featchain-blockchain",
   "version": "1.0.0",
-  "description": "",
+  "description": "The achievement blockchain",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \\\"Error: no tests specified\\\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "lisk",
+    "blockchain",
+    "achievement",
+    "feat"
+  ],
+  "author": "Jonathan MASSUCHETTI",
+  "license": "GPL-3.0",
   "dependencies": {
-    "lisk-sdk": "^3.0.2",
-    "@liskhq/lisk-transactions": "^3.0.2"
+    "@liskhq/lisk-transactions": "3.0.2",
+    "lisk-sdk": "3.0.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^25.1.4",
+    "jest": "^25.1.0",
+    "jest-when": "^2.7.0",
+    "ts-jest": "^25.2.1",
+    "typescript": "^3.8.3"
   }
 }
