--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -2,9 +2,16 @@
   "name": "featchain-blockchain",
   "version": "1.0.0",
   "description": "The achievement blockchain",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \\\"Error: no tests specified\\\" && exit 1"
+    "start": "node dist/index.js",
+    "prebuild": "if test -d dist; then rm -r dist; fi; rm -f tsconfig.tsbuildinfo",
+    "build": "tsc",
+    "test": "jest"
+  },
+  "engines": {
+    "node": ">=12.14.1",
+    "npm": ">=6.13.4"
   },
   "keywords": [
     "lisk",
