--- a/blockchain/tsconfig.json
+++ b/blockchain/tsconfig.json
@@ -11,7 +11,8 @@
         "removeComments": true,
         "resolveJsonModule": true,
         "sourceMap": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "outDir": "./dist"
     },
     "include": [
         "src",
