--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "engines": {
-    "node": ">=12.14.1",
+    "node": "12.15.0",
     "npm": ">=6.13.4"
   },
   "keywords": [
