--- a/blockchain/src/transactions/package.json
+++ b/blockchain/src/transactions/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/transactions/index.js",
-  "types": "dist/transactions/index.d.ts",
+  "files": ["dist/transactions/index.d.ts", "../../typings/featchain.d.ts"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@liskhq/lisk-transactions": "3.0.2",
+  "peerDependencies": {
     "@liskhq/bignum": "1.3.1",
+    "@liskhq/lisk-transactions": "3.0.2",
     "@liskhq/lisk-validator": "0.3.1"
   }
 }
