--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -23,7 +23,8 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@liskhq/lisk-transactions": "3.0.2",
-    "lisk-sdk": "3.0.2"
+    "lisk-sdk": "3.0.2",
+    "lisk-transaction-faucet": "^1.0.4"
   },
   "devDependencies": {
     "@types/jest": "^25.1.4",
