--- a/webapp/.eslintrc
+++ b/webapp/.eslintrc
@@ -8,6 +8,7 @@
   "rules": {
     "no-unused-vars": ["warn", { "vars": "local" }],
     "no-unused-expressions": "warn",
-    "@typescript-eslint/no-empty-interface": "off"
+    "@typescript-eslint/no-empty-interface": "off",
+    "curly": ["error", "multi"]
   }
 }
