--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,6 +11,7 @@
     "@formatjs/intl-pluralrules": "^1.5.2",
     "@formatjs/intl-relativetimeformat": "^4.5.9",
     "@liskhq/lisk-api-client": "^3.0.1",
+    "@liskhq/lisk-client": "latest",
     "@liskhq/lisk-constants": "^1.3.0",
     "@liskhq/lisk-cryptography": "^2.4.2",
     "@liskhq/lisk-transactions": "^3.0.2",
@@ -31,6 +32,7 @@
     "formik": "^2.1.2",
     "history": "latest",
     "jest": "24.9.0",
+    "lisk-transaction-faucet": "^1.0.4",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
@@ -50,8 +52,7 @@
     "typescript": "^3.7.2",
     "uikit": "^3.3.0",
     "utility-types": "^3.10.0",
-    "yup": "^0.28.0",
-      "@liskhq/lisk-client": "latest"
+    "yup": "^0.28.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
