--- a/blockchain/src/transactions/tsconfig.json
+++ b/blockchain/src/transactions/tsconfig.json
@@ -13,5 +13,6 @@
     "esModuleInterop": true,
     "outDir": "./dist",
     "declaration": true
-  }
+  },
+  "exclude": ["node_modules", "dist"]
 }
