--- a/blockchain/tsconfig.json
+++ b/blockchain/tsconfig.json
@@ -18,5 +18,6 @@
         "src",
         "typings",
         "node_modules/typescript/lib/lib.dom.d.ts"
-    ]
+    ],
+    "exclude": ["dist", "node_modules", "src/transactions/dist", "src/transactions/node_modules"]
 }
