--- a/blockchain/src/transactions/package.json
+++ b/blockchain/src/transactions/package.json
@@ -8,7 +8,8 @@
     "../../typings/featchain.d.ts"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "if test -d dist; then rm -r dist; fi; tsc"
   },
   "keywords": [],
   "author": "",
