--- a/webapp/package.json
+++ b/webapp/package.json
@@ -36,6 +36,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
+    "qrcode.react": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-intl": "^3.11.0",
@@ -80,6 +81,7 @@
   },
   "devDependencies": {
     "@formatjs/cli": "^1.1.20",
+    "@types/qrcode.react": "^1.0.0",
     "@types/react-intl": "^3.0.0",
     "@types/yup": "^0.26.27",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
