--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -2,10 +2,10 @@
   "name": "featchain-blockchain",
   "version": "1.0.0",
   "description": "The achievement blockchain",
-  "main": "dist/index.js",
+  "main": "dist/src/transactions/index.js",
   "scripts": {
     "prestart": "npm run build",
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "prebuild": "if test -d dist; then rm -r dist; fi; rm -f tsconfig.tsbuildinfo",
     "build": "tsc",
     "test": "jest"
