use new blockchain package

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "src/index.tsx",
   "dependencies": {
-    "@ant-design/icons": "^4.0.3",
+    "@ant-design/icons": "^4.1.0",
     "@babel/polyfill": "^7.8.3",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
@@ -24,11 +24,11 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "7.0.8",
     "@types/react-router-dom": "4.3.2",
-    "antd": "^4.0.3",
+    "antd": "^4.1.0",
     "axios": "^0.19.1",
     "babel-plugin-react-intl": "^5.1.18",
     "connected-react-router": "latest",
-    "featchain-transactions": "file:../blockchain/src/transactions",
+    "featchain-blockchain": "1.0.0",
     "formik": "^2.1.2",
     "history": "latest",
     "jest": "24.9.0",
@@ -58,6 +58,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "docker-build": "docker build . -t featchain-webapp",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "prettier": "prettier --list-different 'src/**/*.ts' || (echo '\nPlease run the following command to fix:\nnpm run prettier:fix\n'; exit 1)",
