--- a/blockchain/.env
+++ b/blockchain/.env
@@ -1,7 +1,7 @@
+POSTGRES_HOST=192.168.64.5
+POSTGRES_PORT=5432
 POSTGRES_USER=lisk
 POSTGRES_PASSWORD=password
 POSTGRES_DB=lisk_dev
-POSTGRES_HOST=localhost
 
-HTTP_HOST=localhost
-HTTP_PORT=4000
+HTTP_API_PORT=4000
