--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/src/index.js",
     "prebuild": "if test -d dist; then rm -r dist; fi; rm -f tsconfig.tsbuildinfo",
     "build": "tsc",
+    "docker-build": "docker build . -t featchain-blockchain",
     "test": "jest"
   },
   "engines": {
@@ -25,7 +26,8 @@
   "dependencies": {
     "@liskhq/lisk-transactions": "3.0.2",
     "lisk-sdk": "3.0.2",
-    "lisk-transaction-faucet": "^1.0.4"
+    "lisk-transaction-faucet": "^1.0.4",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "@types/jest": "^25.1.4",
