switch to runtime config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         depends_on:
           - blockchain
         environment:
-            - 'REACT_APP_FEATCHAIN_BASEURL=${PUBLIC_API_URL}'
+            - 'REACT_APP_FEATCHAIN_BASEURL=${PUBLIC_API_URL:-http://localhost:4000}'
         ports:
         - '8080:4000'
 
@@ -30,6 +30,7 @@ services:
 
     db:
         image: postgres:10
+        restart: unless-stopped
         environment:
             - 'POSTGRES_PORT=5432'
             - 'POSTGRES_USER=lisk'
