--- a/webapp/.env.development
+++ b/webapp/.env.development
@@ -1,1 +1,4 @@
 REACT_APP_FEATCHAIN_BASEURL=http://localhost:4000
+
+REACT_APP_FEATCHAIN_DEFAULT_ACCOUNT_ADDRESS=
+REACT_APP_FEATCHAIN_DEFAULT_ACCOUNT_PASSPHRASE=
