--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
         depends_on:
           - blockchain
         environment:
-            - 'REACT_APP_FEATCHAIN_BASEURL=${PUBLIC_API_URL:-http://localhost:4000}'
+            - 'REACT_APP_FEATCHAIN_API_URL=${PUBLIC_API_URL:-http://localhost:4000}'
+            - 'REACT_APP_FEATCHAIN_FRONT_URL=${PUBLIC_FRONT_URL:-http://localhost:8080}'
         ports:
         - '8080:3000'
 
